--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "aos": "^2.3.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
